--- a/foundry.toml
+++ b/foundry.toml
@@ -7,4 +7,6 @@ remappings = [
     "@openzeppelin=lib/openzeppelin-contracts"
 ]
 
+via-ir = true
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
